fixed message text layout shifting 1837

--- a/assets/css/mQ.css
+++ b/assets/css/mQ.css
@@ -47,7 +47,7 @@
     }
 
     h2 {
-        font-size: 1.25em;
+        font-size: 1.05em;
     }
 
     h3 {
@@ -68,7 +68,7 @@
     }
 
     h2 {
-        font-size: 1.2em;
+        font-size: 1.05em;
     }
 
     #scoreDisplay {
